--- a/app/views/todo-index.html
+++ b/app/views/todo-index.html
@@ -1,15 +1,3 @@
-<div class="todo-index" ng-controller="TodoIndexCtrl">
-
-	<table>
-		<tr>
-			<th>Task</th>
-			<th>Complete</th>
-			<th></th>
-		</tr>
-		<tr ng-repeat="todo in todos.list">
-			<td>{{todo.task}}</td>
-			<td>{{todo.complete}}</td>
-			<td><a ui-sref="edit({ id: todo.id })"> Edit </a></td>
-		</tr>
-	</table>
+<div class="todo-index">
+	{{ todos }}
 </div>
